<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="2dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_budget"
        style="@style/TextStyle3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="@+id/text_input_layout_amount"
        app:layout_constraintEnd_toStartOf="@+id/text_input_layout_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_input_layout_amount"
        tools:text="Budget" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_amount"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="116dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_amount"
            style="@style/TextStyle3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:selectAllOnFocus="true"
            android:text="100.0"
            android:textAlignment="textEnd" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/text_view_goal"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="sans-serif"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:minHeight="0dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="RM 100"
        android:textAlignment="textEnd"
        android:textColor="?attr/colorOnSurface"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_input_layout_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_input_layout_amount"
        app:layout_constraintTop_toTopOf="@+id/text_input_layout_amount" />

</androidx.constraintlayout.widget.ConstraintLayout>