<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/save_budgeting"
        android:icon="@drawable/ic_baseline_check_24"
        android:title="Save"
        app:showAsAction="always" />

</menu>